Get currencies parametrized and add error control Minor refactors

--- a/apps/crypto-values/pages/styles.css
+++ b/apps/crypto-values/pages/styles.css
@@ -3,6 +3,8 @@ html {
     font-size: 14px;
 }
 
+/*todo: review*/
+/*
 .List {
     border: 1px solid #e6e4dc;
     max-width: 100%;
@@ -17,4 +19,4 @@ html {
 
 .ListItemEven {
     background-color: #e6e4dc;
-}
+}*/
