--- a/apps/crypto-values/pages/page5/gridtable.module.css
+++ b/apps/crypto-values/pages/page5/gridtable.module.css
@@ -1,7 +1,11 @@
 .cell {
-  /* display: flex;
+  display: flex;
   align-items: center;
   justify-content: center;
   border-bottom: 1px solid #eee;
-  border-right: 1px solid #eee; */
+  border-right: 1px solid #eee;
+}
+
+.ch {
+  font-size: x-small;
 }
