--- a/apps/crypto-values/pages/period/page5.module.css
+++ b/apps/crypto-values/pages/period/page5.module.css
@@ -1,4 +1,4 @@
-.app {
-  font-family: sans-serif;
-  text-align: center;
-}
+/*.app {*/
+/*  font-family: sans-serif;*/
+/*  text-align: center;*/
+/*}*/
