--- a/apps/crypto-values/pages/period/period.module.css
+++ b/apps/crypto-values/pages/period/period.module.css
@@ -3,6 +3,20 @@
 }
 
 .maincontainer {
-  margin-top: 1em;
   text-align: center;
+}
+
+.selectbtn {
+  height: 36px;
+  width: 150px;
+  margin-left: 5px;
+  margin-right: 5px;
+  margin-top: 15px;
+}
+
+.inputdate {
+  width: 140px;
+  margin-left: 5px;
+  margin-right: 5px;
+  margin-top: 15px;
 }
