--- a/apps/crypto-values/pages/mock-data/Period.module.css
+++ b/apps/crypto-values/pages/mock-data/Period.module.css
@@ -1,12 +1,12 @@
-.tablecontainer {
+.tableContainer {
   margin: 0.1em;
 }
 
-.maincontainer {
+.mainContainer {
   text-align: center;
 }
 
-.selectbtn {
+.selectBtn {
   height: 36px;
   width: 150px;
   margin-left: 5px;
@@ -14,7 +14,7 @@
   margin-top: 15px;
 }
 
-.inputdate {
+.inputDate {
   width: 140px;
   margin-left: 5px;
   margin-right: 5px;
