--- a/apps/crypto-values/components/Loader/loader.module.css
+++ b/apps/crypto-values/components/Loader/loader.module.css
@@ -5,3 +5,33 @@
     justify-content: center;
     align-items: center;
 }
+
+.rotateCenter {
+    margin: 5px;
+    font-size: x-large;
+    color: deepskyblue;
+    -webkit-animation: rotateCenter 2s ease-in-out infinite ;
+    animation: rotateCenter 2s ease-in-out infinite ;
+}
+
+@-webkit-keyframes rotateCenter {
+    0% {
+        -webkit-transform: rotate(0);
+        transform: rotate(0);
+    }
+    100% {
+        -webkit-transform: rotate(360deg);
+        transform: rotate(360deg);
+    }
+}
+@keyframes rotateCenter {
+    0% {
+        -webkit-transform: rotate(0);
+        transform: rotate(0);
+    }
+    100% {
+        -webkit-transform: rotate(360deg);
+        transform: rotate(360deg);
+    }
+}
+
