--- a/apps/crypto-values/pages/styles.css
+++ b/apps/crypto-values/pages/styles.css
@@ -2,6 +2,10 @@ html {
     font-size: 14px;
 }
 
+body{
+    overflow: hidden;
+}
+
 .fade-in {
     -webkit-animation: fade-in 1.2s cubic-bezier(0.390, 0.575, 0.565, 1.000) both;
     animation: fade-in 1.2s cubic-bezier(0.390, 0.575, 0.565, 1.000) both;
